feat: Add csrf protection to post endpoints

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -23,3 +23,8 @@ auth {
     basic_password = ${?BASIC_PASSWORD}
     api_key = ${?API_KEY}
 }
+
+app {
+    scheme = ${?SCHEME}
+    domain = ${?DOMAIN}
+}
